exports[`no-commented-tests > invalid(1): // test.test('a', () => {}); 1`] = `

  1 | // test.test('a', () => {});

`;

exports[`no-commented-tests > invalid(1): // test.test('a', () => {}); 2`] = `

Message:
> 1 | // test.test('a', () => {});
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(10): // after(() => { 1`] = `

  1 | // after(() => {

`;

exports[`no-commented-tests > invalid(10): // after(() => { 2`] = `

Message:
> 1 | // after(() => {
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(11): // beforeEach(() => { 1`] = `

  1 | // beforeEach(() => {

`;

exports[`no-commented-tests > invalid(11): // beforeEach(() => { 2`] = `

Message:
> 1 | // beforeEach(() => {
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(12): // afterEach(() => { 1`] = `

  1 | // afterEach(() => {

`;

exports[`no-commented-tests > invalid(12): // afterEach(() => { 2`] = `

Message:
> 1 | // afterEach(() => {
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(13): //test(\"foo\", () => {}) 1`] = `

  1 | //test("foo", () => {})

`;

exports[`no-commented-tests > invalid(13): //test(\"foo\", () => {}) 2`] = `

Message:
> 1 | //test("foo", () => {})
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(14): // test.only(\"foo\", () => {}) 1`] = `

  1 | // test.only("foo", () => {})

`;

exports[`no-commented-tests > invalid(14): // test.only(\"foo\", () => {}) 2`] = `

Message:
> 1 | // test.only("foo", () => {})
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(15): // test.skip(\"foo\", () => {}) 1`] = `

  1 | // test.skip("foo", () => {})

`;

exports[`no-commented-tests > invalid(15): // test.skip(\"foo\", () => {}) 2`] = `

Message:
> 1 | // test.skip("foo", () => {})
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(16): // it.only(\"foo\", () => {}) 1`] = `

  1 | // it.only("foo", () => {})

`;

exports[`no-commented-tests > invalid(16): // it.only(\"foo\", () => {}) 2`] = `

Message:
> 1 | // it.only("foo", () => {})
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(17): /* test(\"foo\", () => {}) */ 1`] = `

  1 | /* test("foo", () => {}) */

`;

exports[`no-commented-tests > invalid(17): /* test(\"foo\", () => {}) */ 2`] = `

Message:
> 1 | /* test("foo", () => {}) */
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(18): /*\n * test(\"foo\", () => {\n */ 1`] = `

  1 | /*
  2 |  * test("foo", () => {
  3 |  */

`;

exports[`no-commented-tests > invalid(18): /*\n * test(\"foo\", () => {\n */ 2`] = `

Message:
  1 | /*
> 2 |  * test("foo", () => {
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.
  3 |  */

`;

exports[`no-commented-tests > invalid(19): // describe.only(\"group\", () => {}) 1`] = `

  1 | // describe.only("group", () => {})

`;

exports[`no-commented-tests > invalid(19): // describe.only(\"group\", () => {}) 2`] = `

Message:
> 1 | // describe.only("group", () => {})
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(2): // test.it('a', () => {}); 1`] = `

  1 | // test.it('a', () => {});

`;

exports[`no-commented-tests > invalid(2): // test.it('a', () => {}); 2`] = `

Message:
> 1 | // test.it('a', () => {});
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(20): // it.todo(\"foo\", () => {}) 1`] = `

  1 | // it.todo("foo", () => {})

`;

exports[`no-commented-tests > invalid(20): // it.todo(\"foo\", () => {}) 2`] = `

Message:
> 1 | // it.todo("foo", () => {})
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(21): // test.todo(\"foo\", () => {}) 1`] = `

  1 | // test.todo("foo", () => {})

`;

exports[`no-commented-tests > invalid(21): // test.todo(\"foo\", () => {}) 2`] = `

Message:
> 1 | // test.todo("foo", () => {})
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(22): // test.describe(\"group\", () => {}) 1`] = `

  1 | // test.describe("group", () => {})

`;

exports[`no-commented-tests > invalid(22): // test.describe(\"group\", () => {}) 2`] = `

Message:
> 1 | // test.describe("group", () => {})
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(23): // test.suite(\"group\", () => {}) 1`] = `

  1 | // test.suite("group", () => {})

`;

exports[`no-commented-tests > invalid(23): // test.suite(\"group\", () => {}) 2`] = `

Message:
> 1 | // test.suite("group", () => {})
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(24): // test.beforeEach(() => {}) 1`] = `

  1 | // test.beforeEach(() => {})

`;

exports[`no-commented-tests > invalid(24): // test.beforeEach(() => {}) 2`] = `

Message:
> 1 | // test.beforeEach(() => {})
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(25): // it.after(() => {}) 1`] = `

  1 | // it.after(() => {})

`;

exports[`no-commented-tests > invalid(25): // it.after(() => {}) 2`] = `

Message:
> 1 | // it.after(() => {})
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(26): // await test(\"foo\", async () => {}) 1`] = `

  1 | // await test("foo", async () => {})

`;

exports[`no-commented-tests > invalid(26): // await test(\"foo\", async () => {}) 2`] = `

Message:
> 1 | // await test("foo", async () => {})
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(27): import {test as t} from 'node:test';\n// t('a', () => {}); 1`] = `

  1 | import {test as t} from 'node:test';
  2 | // t('a', () => {});

`;

exports[`no-commented-tests > invalid(27): import {test as t} from 'node:test';\n// t('a', () => {}); 2`] = `

Message:
  1 | import {test as t} from 'node:test';
> 2 | // t('a', () => {});
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(28): import {it as check} from 'node:test';\n// check('a', () => {}); 1`] = `

  1 | import {it as check} from 'node:test';
  2 | // check('a', () => {});

`;

exports[`no-commented-tests > invalid(28): import {it as check} from 'node:test';\n// check('a', () => {}); 2`] = `

Message:
  1 | import {it as check} from 'node:test';
> 2 | // check('a', () => {});
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(29): import {test as t} from 'node:test';\n// t.skip('a', () => {}); 1`] = `

  1 | import {test as t} from 'node:test';
  2 | // t.skip('a', () => {});

`;

exports[`no-commented-tests > invalid(29): import {test as t} from 'node:test';\n// t.skip('a', () => {}); 2`] = `

Message:
  1 | import {test as t} from 'node:test';
> 2 | // t.skip('a', () => {});
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(3): // it.it('a', () => {}); 1`] = `

  1 | // it.it('a', () => {});

`;

exports[`no-commented-tests > invalid(3): // it.it('a', () => {}); 2`] = `

Message:
> 1 | // it.it('a', () => {});
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(30): import {test as testCase} from 'node:test';\n// testCase('a', () => {}); 1`] = `

  1 | import {test as testCase} from 'node:test';
  2 | // testCase('a', () => {});

`;

exports[`no-commented-tests > invalid(30): import {test as testCase} from 'node:test';\n// testCase('a', () => {}); 2`] = `

Message:
  1 | import {test as testCase} from 'node:test';
> 2 | // testCase('a', () => {});
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(31): import {test} from 'node:test';\n// test('a', () => {});\ntest('b', () => {}); 1`] = `

  1 | import {test} from 'node:test';
  2 | // test('a', () => {});
  3 | test('b', () => {});

`;

exports[`no-commented-tests > invalid(31): import {test} from 'node:test';\n// test('a', () => {});\ntest('b', () => {}); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | // test('a', () => {});
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.
  3 | test('b', () => {});

`;

exports[`no-commented-tests > invalid(4): import * as nodeTest from 'node:test';\n// nodeTest.test('a', () => {}); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | // nodeTest.test('a', () => {});

`;

exports[`no-commented-tests > invalid(4): import * as nodeTest from 'node:test';\n// nodeTest.test('a', () => {}); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | // nodeTest.test('a', () => {});
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(5): // test(\"foo\", () => { 1`] = `

  1 | // test("foo", () => {

`;

exports[`no-commented-tests > invalid(5): // test(\"foo\", () => { 2`] = `

Message:
> 1 | // test("foo", () => {
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(6): // it(\"foo\", () => { 1`] = `

  1 | // it("foo", () => {

`;

exports[`no-commented-tests > invalid(6): // it(\"foo\", () => { 2`] = `

Message:
> 1 | // it("foo", () => {
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(7): // describe(\"group\", () => { 1`] = `

  1 | // describe("group", () => {

`;

exports[`no-commented-tests > invalid(7): // describe(\"group\", () => { 2`] = `

Message:
> 1 | // describe("group", () => {
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(8): // suite(\"group\", () => { 1`] = `

  1 | // suite("group", () => {

`;

exports[`no-commented-tests > invalid(8): // suite(\"group\", () => { 2`] = `

Message:
> 1 | // suite("group", () => {
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;

exports[`no-commented-tests > invalid(9): // before(() => { 1`] = `

  1 | // before(() => {

`;

exports[`no-commented-tests > invalid(9): // before(() => { 2`] = `

Message:
> 1 | // before(() => {
    | ^ Use \`.skip()\` or remove the commented-out test instead of commenting it out.

`;
